// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFootballFixturesTournament should render full width correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa jdFjsU"
  >
    <div
      class="opta-placeholder sc-bwzfXH eSqyJ"
    >
      Placeholder
    </div>
    <div
      class="sc-htpNat sc-ifAKCX etYffo"
    />
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTournament should render national competitions correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa dEqLmD"
  >
    <div
      class="opta-placeholder sc-bwzfXH eSqyJ"
    >
      Placeholder
    </div>
    <div
      class="sc-htpNat sc-ifAKCX etYffo"
    />
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTournament should render national competitions correctly with single column 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa dEqLmD"
  >
    <div
      class="opta-placeholder sc-bwzfXH eSqyJ"
    >
      Placeholder
    </div>
    <div
      class="sc-htpNat sc-ifAKCX loviIg"
    />
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTournament should render other competitions correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa dEqLmD"
  >
    <div
      class="opta-placeholder sc-bwzfXH eSqyJ"
    >
      Placeholder
    </div>
    <div
      class="sc-htpNat sc-ifAKCX etYffo"
    />
  </div>
</DocumentFragment>
`;
